package v1

import (
	"context"
	"medblogers_base/internal/app/interceptor"
	desc "medblogers_base/internal/pb/medblogers_base/api/admin/doctors/doctors/v1"
)

func (i *Implementation) DeleteDoctor(ctx context.Context, req *desc.DeleteDoctorRequest) (resp *desc.DeleteDoctorResponse, err error) {
	executor := interceptor.ExecuteWithPermissions(i.auth.Actions.CheckPermissions)

	return resp, executor(ctx, "/api/v1/admin/doctor/{id}/delete", func(ctx context.Context) error {

		return nil
	})
}
