package v1

import (
	"context"
	"medblogers_base/internal/app/interceptor"
	desc "medblogers_base/internal/pb/medblogers_base/api/admin/doctors/doctors/v1"
)

func (i *Implementation) UpdateDoctor(ctx context.Context, req *desc.UpdateDoctorRequest) (resp *desc.UpdateDoctorResponse, err error) {
	executor := interceptor.ExecuteWithPermissions(i.auth.Actions.CheckPermissions)

	return resp, executor(ctx, "/api/v1/admin/doctor/{id}/update", func(ctx context.Context) error {

		return nil
	})
}
